[ADD] Playing around with some CSS and HTML.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,58 @@
 <!DOCTYPE html>
+<head>
+    <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css">
+</head>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <main class="container">
+        <h1> Dylan James Ramsden </h1>
+        <h2>Gameplay Programmer</h2>
+        <h3> Making and breaking games! </h3>
+    </main>
+
+    <main class="container">
+        <div>
+            <blockquote>
+                “Design is a funny word. Some people think 
+                design means how it looks. But of course, if 
+                you dig deeper, it's really how it works.”
+                <footer>
+                    <cite style="color:var(--pico-contrast-border)">— Steve Jobs</cite>
+                </footer>
+            </blockquote>
+        </div>
+    </main>
+
+    <main class="container">
+        <h2>My Latest Work</h2>
+        <div class="grid" style="padding-top: 1%;">
+            <iframe width="100%" height="250px" src="https://www.youtube.com/embed/Oz-5YwiwWrc" frameborder="0" allowfullscreen></iframe>
+            <iframe width="100%" height="250px" src="https://www.youtube.com/embed/e-ej1Y95LBI" frameborder="0" allowfullscreen></iframe>
+            <iframe width="100%" height="250px" src="https://www.youtube.com/embed/ebOBVpkOWeQ" frameborder="0" allowfullscreen></iframe>
+        </div>
+    </main> 
+
+    <main class="container">
+  <h2>My Projects</h2>
+
+  <ul style="list-style: none; padding: 0; display: flex; flex-direction: column; gap: 1.5rem;"> <!-- ul = Unordered list -->
+    <li style="display: flex; align-items: center; gap: 1rem;"> <!-- li = List -->
+      <img src="./resources/images/Unreal Engine Logo.png" alt="Project 1" style="max-width: 80px; height: auto; border-radius: 0.5rem;" />
+      <div>
+        <h3 style="margin: 0;">Some Game Dev Position</h3>
+        <p style="margin: 0;">Some game dev task I accomplished with learning.</p>
+      </div>
+    </li>
+
+    <li style="display: flex; align-items: center; gap: 1rem;">
+      <img src="./resources/images/Unity Logo.png" alt="Project 2" style="max-width: 80px; height: auto; border-radius: 0.5rem;" />
+      <div>
+        <h3 style="margin: 0;">Some Game Dev Position</h3>
+        <p style="margin: 0;">Some game dev task I accomplished with learning.</p>
+      </div>
+    </li>
+    <!-- Add more items as needed -->
+  </ul>
+</main>
 </body>
 </html>
