[ADD] Now displaying multiple videos with basic hover functionality.

--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <head>
     <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <html>
 <body>
     <main class="container">
         <h1> Dylan James Ramsden </h1>
         <h2>Gameplay Programmer</h2>
-        <h3> Making and breaking games! </h3>
+        <h3> Johannesburg, South Africa </h3>
+    </main>
+
+    <main class="container">
+      <img src="./resources/images/me.jpg" alt="Project 2" style="max-width: 500px; height: auto; border-radius: 0.5rem; border-color: var(--pico-contrast-border); border-style: solid; border-width: 0.15rem;" />
     </main>
 
     <main class="container">
@@ -25,21 +30,36 @@
 
     <main class="container">
         <h2>My Latest Work</h2>
-        <div class="grid" style="padding-top: 1%;">
-            <iframe width="100%" height="250px" src="https://www.youtube.com/embed/Oz-5YwiwWrc" frameborder="0" allowfullscreen></iframe>
-            <iframe width="100%" height="250px" src="https://www.youtube.com/embed/e-ej1Y95LBI" frameborder="0" allowfullscreen></iframe>
-            <iframe width="100%" height="250px" src="https://www.youtube.com/embed/ebOBVpkOWeQ" frameborder="0" allowfullscreen></iframe>
+        <div class="grid" style="padding-top: 1%; grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));">
+            <iframe src="https://www.youtube.com/embed/Oz-5YwiwWrc" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/oErMPW0bg2o" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/wpOp2ybHAdk" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/oFlSR3lOpQc" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/55riwogdEMs" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/lF1Y3iCsSuo" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/IdaalPA9PWI" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/1E2TcWnn2bA" frameborder="0" allowfullscreen></iframe>
         </div>
     </main> 
 
     <main class="container">
-  <h2>My Projects</h2>
+        <h2>Game Jams And Personal Projects</h2>
+        <div class="grid" style="padding-top: 1%; grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));">
+            <iframe src="https://www.youtube.com/embed/XG5VdTz6bWw" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/Qa1J0TmpZFw" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/as030_ZD5Ro" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/l2ExNHMrpmg" frameborder="0" allowfullscreen></iframe>
+        </div>
+    </main> 
+
+    <main class="container">
+  <h2>My Experience</h2>
 
   <ul style="list-style: none; padding: 0; display: flex; flex-direction: column; gap: 1.5rem;"> <!-- ul = Unordered list -->
     <li style="display: flex; align-items: center; gap: 1rem;"> <!-- li = List -->
       <img src="./resources/images/Unreal Engine Logo.png" alt="Project 1" style="max-width: 80px; height: auto; border-radius: 0.5rem;" />
       <div>
-        <h3 style="margin: 0;">Some Game Dev Position</h3>
+        <h3 style="margin: 0;">Gameplay Programmer - Gamecan</h3>
         <p style="margin: 0;">Some game dev task I accomplished with learning.</p>
       </div>
     </li>
