Multiple updates regarding content and layout.

--- a/index.html
+++ b/index.html
@@ -12,10 +12,25 @@
     </main>
 
     <main class="container">
-      <img src="./resources/images/me.jpg" alt="Project 2" style="max-width: 500px; height: auto; border-radius: 0.5rem; border-color: var(--pico-contrast-border); border-style: solid; border-width: 0.15rem;" />
+      <section style="width: auto; display: flex; align-items: center; gap: 2rem;">
+        <img class="with-border" src="./resources/images/me.jpg" alt="Descriptive Alt" style="width: 500px; height: auto; border-radius: 0.5rem;" />
+
+        <p style="margin: 0;">
+          I am Dylan James Ramsden, a <span style="color: var(--pico-primary-hover-background)">UE4/5 Gameplay Programmer</span> , with 
+          <span style="color: var(--pico-primary-hover-background)">4 years industry experience</span>. 
+          I have worked on multiple <span style="color: var(--pico-primary-hover-background)">multiplayer and singleplayer games</span>, where one
+          was shipped and another got demoed on SteamNextFest.<br>
+          <br>
+          Games have been my life for as long as I can remember. Always disecting the mechanics I experience and build and breaking them down into small and managable pieces. A mechanic
+          is just a collection of small interactions and actions built and layered on top of eachother to create something unique and memorable.<br>
+          <br>
+          Lastly, I am a people's person. I love engaging with teams as well as building relationships with those I work with because I truly believe that amazing games are built by close 
+          and tight-knit teams.
+        </p>
+      </section>
     </main>
 
-    <main class="container">
+    <!-- <main class="container">
         <div>
             <blockquote>
                 “Design is a funny word. Some people think 
@@ -26,6 +41,38 @@
                 </footer>
             </blockquote>
         </div>
+    </main> -->
+
+    <main class="container">
+      <h2>Shipped Titles</h2>
+      <section style="width: auto; display: flex; align-items: center; gap: 2rem; padding-top: 1%;">
+        <img class="with-border" src="./resources/images/VAIL.jpg" alt="Descriptive Alt" style="width: 500px; height: auto; border-radius: 0.5rem;" />
+        <h6 style="margin: 0; width: 100px; text-align: center;">
+          VAIL VR
+        </h6>
+        <ul style="list-style-type: circle; width: 500px; margin: 0;">
+            <li>Built systems and Mechanics in C++ and BP.</li>
+            <li>Used replication to create seamless multiplayer experiences</li>
+            <li>Worked with QA team to fix bugs and make improvements to my features.</li>
+        </ul>
+        <button style=" margin: 0;">
+          View
+        </button>
+      </section>
+      <section style="width: auto; display: flex; align-items: center; gap: 2rem;">
+        <img class="with-border" src="./resources/images/Oh Hel No.jpg" alt="Descriptive Alt" style="width: 500px; height: auto; border-radius: 0.5rem;" />
+        <h6 style="margin: 0; width: 100px; text-align: center;">
+          Oh, Hel No!
+        </h6>
+        <ul style="list-style-type: circle; width: 500px; margin: 0; ">
+            <li>Built systems and Mechanics in C++ and BP.</li>
+            <li>Used replication to create seamless multiplayer experiences</li>
+            <li>Worked with QA team to fix bugs and make improvements to my features.</li>
+        </ul>
+        <button style="width: auto;">
+          View
+        </button>
+      </section>
     </main>
 
     <main class="container">
@@ -59,19 +106,56 @@
     <li style="display: flex; align-items: center; gap: 1rem;"> <!-- li = List -->
       <img src="./resources/images/Unreal Engine Logo.png" alt="Project 1" style="max-width: 80px; height: auto; border-radius: 0.5rem;" />
       <div>
-        <h3 style="margin: 0;">Gameplay Programmer - Gamecan</h3>
-        <p style="margin: 0;">Some game dev task I accomplished with learning.</p>
+        <h3 style="margin: 0;">Gameplay Programmer - <span style="color: var(--pico-primary-hover-background)">Gamecan</span> - <span style="color: var(--pico-primary-hover-background)">2024 - 2025</span></h3>
+        <ul style="margin: 0.5rem 0 0 1rem; padding: 0; list-style-type: disc;">
+          <li>C++ and BP</li>
+          <li>Used GAS and Replication to bring co-op survival mechanics and systems to life.</li>
+          <li>Implemented quick gameplay prototypes in short amounts of time.</li>
+          <li>Used Perforce for source control and Jira for project managment and sprints</li>
+          <li>Games: <span style="color: var(--pico-ins-color); font-weight: bold;">Contenders: Arena</span> and <span style="color: var(--pico-ins-color); font-weight: bold;">Oh, Hel No!</span></li>
+        </ul>
       </div>
     </li>
 
-    <li style="display: flex; align-items: center; gap: 1rem;">
-      <img src="./resources/images/Unity Logo.png" alt="Project 2" style="max-width: 80px; height: auto; border-radius: 0.5rem;" />
+    <li style="display: flex; align-items: center; gap: 1rem;"> <!-- li = List -->
+      <img src="./resources/images/Unity Logo.png" alt="Project 1" style="max-width: 80px; height: auto; border-radius: 0.5rem;" />
       <div>
-        <h3 style="margin: 0;">Some Game Dev Position</h3>
-        <p style="margin: 0;">Some game dev task I accomplished with learning.</p>
+        <h3 style="margin: 0;">Freelance Gameplay Programmer - <span style="color: var(--pico-primary-hover-background)">Eleon Game Studio</span> - <span style="color: var(--pico-primary-hover-background)">2024</span></h3>
+        <ul style="margin: 0.5rem 0 0 1rem; padding: 0; list-style-type: disc;">
+          <li>DOTS and C#</li>
+          <li>Built foundational systems and frameworks that will be used throughout the games development.</li>
+          <li>Used Git for source control</li>
+          <li>Games: <span style="color: var(--pico-ins-color); font-weight: bold;">Unannounced open world space game</span></li>
+        </ul>
       </div>
     </li>
-    <!-- Add more items as needed -->
+
+    <li style="display: flex; align-items: center; gap: 1rem;"> <!-- li = List -->
+      <img src="./resources/images/Unreal Engine Logo.png" alt="Project 1" style="max-width: 80px; height: auto; border-radius: 0.5rem;" />
+      <div>
+        <h3 style="margin: 0;">Gameplay Programmer - <span style="color: var(--pico-primary-hover-background)">WeLevel</span> - <span style="color: var(--pico-primary-hover-background)">2023</span></h3>
+        <ul style="margin: 0.5rem 0 0 1rem; padding: 0; list-style-type: disc;">
+          <li>C++ and BP</li>
+          <li>Used GAS and Modular Gameplay Features to build replicated multiplayer survival features and mechanics</li>
+          <li>Used Git for source control and Jira for project managment and sprints</li>
+          <li>Games: <span style="color: var(--pico-ins-color); font-weight: bold;">Solid River</span></li>
+        </ul>
+      </div>
+    </li>
+
+    <li style="display: flex; align-items: center; gap: 1rem;"> <!-- li = List -->
+      <img src="./resources/images/Unreal Engine Logo.png" alt="Project 1" style="max-width: 80px; height: auto; border-radius: 0.5rem;" />
+      <div>
+        <h3 style="margin: 0;">Gameplay Programmer - <span style="color: var(--pico-primary-hover-background)">AEXLAB</span> - <span style="color: var(--pico-primary-hover-background)">2022 - 2023</span></h3>
+        <ul style="margin: 0.5rem 0 0 1rem; padding: 0; list-style-type: disc;">
+          <li>C++ and BP</li>
+          <li>Built replicated VR mini-games that can be played standalone or with friends.</li>
+          <li>Worked with a QA team to test features, fix bugs and improve the overall game experience</li>
+          <li>Used Perforce for source control</li>
+          <li>Games: <span style="color: var(--pico-ins-color); font-weight: bold;">VAIL VR</span></li>
+        </ul>
+      </div>
+    </li>
   </ul>
 </main>
 </body>
