[ADD] Added some more info to Shipped Titles section.

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         </h6>
         <ul style="list-style-type: circle; width: 500px; margin: 0; ">
             <li>Built systems and Mechanics in C++ and BP.</li>
-            <li>Used replication to create seamless multiplayer experiences</li>
-            <li>Worked with QA team to fix bugs and make improvements to my features.</li>
+            <li>Built a lot of the foundational systems that are found throughout the game</li>
+            <li>Created a rogue-like stat system that contains 30+ variants/powers and allows the player to pick</li>
         </ul>
         <button style="width: auto;">
           View
