[ADD] Shipped Title buttons now work and open links.

--- a/index.html
+++ b/index.html
@@ -55,9 +55,12 @@
             <li>Used replication to create seamless multiplayer experiences</li>
             <li>Worked with QA team to fix bugs and make improvements to my features.</li>
         </ul>
-        <button style=" margin: 0;">
+        <!-- <button style=" margin: 0;">
           View
-        </button>
+        </button> -->
+        <a href="https://aexlab.com/vail-vr" target="_blank" rel="noopener noreferrer">
+          <button style="width: 200px;">View</button>  
+        </a>
       </section>
       <section style="width: auto; display: flex; align-items: center; gap: 2rem;">
         <img class="with-border" src="./resources/images/Oh Hel No.jpg" alt="Descriptive Alt" style="width: 500px; height: auto; border-radius: 0.5rem;" />
@@ -69,9 +72,9 @@
             <li>Built a lot of the foundational systems that are found throughout the game</li>
             <li>Created a rogue-like stat system that contains 30+ variants/powers and allows the player to pick</li>
         </ul>
-        <button style="width: auto;">
-          View
-        </button>
+        <a href="https://store.steampowered.com/app/3225370/Oh_Hel_No/" target="_blank" rel="noopener noreferrer">
+          <button style="width: 200px;">View</button>  
+        </a>
       </section>
     </main>
 
